Resolving overflow issue in blog page

--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,12 @@ margin:auto;
 padding:20px;
 }
 
+.blog,
+.blog-content-card{
+    overflow-wrap: break-word;
+    word-break: break-word;
+}
+
 
 
 /* ===============================
